# vsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  rewrite_prompt.md
.github/workflows/: ci.yml  publish.yml
devtools/: legacy_loss_lib.py  regenerate_loss_snapshot.py
scripts/: benchmark_loss_lib.py  benchmark_syndrome_vs_run.py  fetch_stim_header.py
src/_fast_loss_lib/: fast_loss_lib.cc
src/vsim/: __init__.py  _fast.cpp  loss_lib.py  stim_parse.py
tests/: stim_fixtures.py  test_coverage_gaps.py  test_fast_loss_lib.py  test_fast_lossy_circuit.py  test_loss_lib.py  test_rewrite_measurements.py  test_snapshot.py  test_stim_parse.py
tests/snapshots/: loss_histogram_d3_seed7.json
