[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
# Use setuptools-scm to provide the version metadata
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# Include the Python source package from src/ just like hatchling did.
wheel.packages = ["src/vsim"]

[tool.setuptools_scm]
# Write the version to a file so it's accessible at runtime
write_to = "src/vsim/_version.py"

[project]
name = "vsim"
dynamic = ["version"]
description = "Quantum circuit simulation utilities (lossy surface-code sampling)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["numpy>=2.4.4", "stim>=1.15.0"]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=vsim", "--cov-report=term-missing", "--cov-fail-under=100"]

[tool.coverage.run]
branch = true
source = ["vsim"]
omit = ["*/vsim/_fast*", "*/vsim/_version.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
